pagestyle.css
/* temporary style for tables */
#greyrow{ border: 10px white solid; }

/* side panel on main page */
#side_panel {border: 2px solid black;
	position: absolute;
	width: 20%;	left: 80%; 
	}

#user_panel {border: 1px solid blue;
	position: absolute;
	top: 0px;
	width: 20%;	left: 80%; 
	text-align: center;
}

/* comment information user/created */
#comment_tag{
color: red;
}

/*block containing single comment*/
#event_comment{


}

/*section containing comments*/
#event_comment_section{

}

/*text for events*/
#event_title{
font-size:30;
}

#event_time{

}

#event_location{

}

#event_contact{

}

